--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,17 @@
 # Core Data & Analysis
-pandas==2.0.0
-numpy==1.24.0
-scipy==1.10.0
+pandas>=2.2.0
+numpy>=1.26.0,<2.0.0
+scipy>=1.11.0
 
-# Machine Learning Clásico
-scikit-learn==1.2.0
-xgboost==2.0.0
-lightgbm==4.0.0
-
-# Database & Caching
-psycopg2-binary==2.9.0
-sqlalchemy==2.0.0
-redis==4.5.0
+# Machine Learning (simplified for MVP)
+scikit-learn>=1.4.0
 
 # Real-Time & APIs
-requests==2.28.0
-aiohttp==3.8.0
-websockets==10.0
+requests>=2.31.0
 
-# Backend
-fastapi==0.95.0
-uvicorn==0.21.0
-pydantic==1.10.0
-
-# Frontend
-streamlit==1.20.0
-plotly==5.13.0
+# Frontend Dashboard
+streamlit>=1.31.0
+plotly>=5.18.0
 
 # Utils
-python-dotenv==1.0.0
-loguru==0.7.0
+python-dotenv>=1.0.0
