Add MVP core: config, database, and API consumer modules

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,10 @@
-# Database
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=football_betting
-POSTGRES_USER=your_user
-POSTGRES_PASSWORD=your_password
+# API Keys (usar tu proveedor de API)
+FOOTBALL_API_KEY=your_api_key_here
+FOOTBALL_API_URL=https://api.your-provider.com/v1
 
-# Redis
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
+# Configuración
+REFRESH_INTERVAL=900  # 15 minutos en segundos
+MIN_CONFIDENCE=0.60
 
-# API Configuration
-API_HOST=0.0.0.0
-API_PORT=8000
-API_SECRET_KEY=your_secret_key_here
-
-# Football Data API (football-data.co.uk or similar)
-FOOTBALL_DATA_API_KEY=your_api_key_here
-
-# Betting Configuration
-MIN_EDGE=0.02
-KELLY_FRACTION=0.25
-DEFAULT_BANKROLL=1000
-
-# Model Configuration
-MODEL_PATH=data/models/
-DATA_PATH=data/
-
-# Logging
-LOG_LEVEL=INFO
+# SQLite (automático, no requiere configuración)
+# El archivo data/predictions.db se creará automáticamente
