--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,28 @@
-# API Keys (usar tu proveedor de API)
-FOOTBALL_API_KEY=your_api_key_here
-FOOTBALL_API_URL=https://api.your-provider.com/v1
+# ========================================
+# API Configuration (Betfair via RapidAPI)
+# ========================================
+FOOTBALL_API_KEY=tu_rapidapi_key_aqui
+FOOTBALL_API_URL=https://betfair-sports-data-fast-and-reliable.p.rapidapi.com
 
-# Configuración
-REFRESH_INTERVAL=900  # 15 minutos en segundos
+# ========================================
+# Dashboard Settings
+# ========================================
+REFRESH_INTERVAL=900
+PAGE_TITLE=Football Betting Predictor - Live
+PAGE_ICON=⚽
+
+# ========================================
+# Prediction Settings
+# ========================================
 MIN_CONFIDENCE=0.60
 
-# SQLite (automático, no requiere configuración)
-# El archivo data/predictions.db se creará automáticamente
+# ========================================
+# Database Settings
+# ========================================
+DB_PATH=data/predictions.db
+
+# ========================================
+# Cache Settings
+# ========================================
+# Cuántas horas cachear las ligas antes de refrescar desde la API
+COMPETITIONS_CACHE_HOURS=24
