Migrate to Football API 7 - Remove mock functionality

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
 # ========================================
-# API Configuration (Betfair via RapidAPI)
+# API Configuration (Football API 7)
 # ========================================
 FOOTBALL_API_KEY=tu_rapidapi_key_aqui
-FOOTBALL_API_URL=https://betfair-sports-data-fast-and-reliable.p.rapidapi.com
 
 # ========================================
 # Dashboard Settings
 # ========================================
-REFRESH_INTERVAL=900
-PAGE_TITLE=Football Betting Predictor - Live
+REFRESH_INTERVAL=300
+PAGE_TITLE=Football Live Tracker
 PAGE_ICON=⚽
 
 # ========================================
@@ -22,7 +21,7 @@ MIN_CONFIDENCE=0.60
 DB_PATH=data/predictions.db
 
 # ========================================
-# Cache Settings
+# Timezone and Language
 # ========================================
-# Cuántas horas cachear las ligas antes de refrescar desde la API
-COMPETITIONS_CACHE_HOURS=24
+DEFAULT_TIMEZONE=america/santiago
+DEFAULT_LANG=en
