--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,8 @@
-# Core Data & Analysis
-pandas>=2.2.0
-numpy>=1.26.0,<2.0.0
-scipy>=1.11.0
-
-# Machine Learning (simplified for MVP)
-scikit-learn>=1.4.0
-
-# Real-Time & APIs
+streamlit>=1.28.0
+pandas>=2.0.0
 requests>=2.31.0
-
-# Frontend Dashboard
-streamlit>=1.31.0
-plotly>=5.18.0
-
-# Utils
 python-dotenv>=1.0.0
+scipy>=1.11.0
+numpy>=1.24.0
+plotly>=5.17.0
+pytz>=2023.3
